# smart-heating

./: README.md
projet/: config.py
projet/core/: heating.py  switch.py  temperature.py  thermostat.py
projet/data/: temperature_2026-02-27_13-15-37.csv  temperature_2026-02-27_13-28-00.csv  temperature_2026-02-27_13-52-42.csv  temperature_2026-02-27_14-07-13.csv
projet/logs/: log_2026-02-21.csv
projet/services/: logger_service.py  storage_manager.py
projet/services/storage/: dropbox_storage.py  local_storage.py  usb_storage.py
projet/tests/: test_dropbox_storage.py  test_local_storage.py  test_storage_manager.py  test_usb_storage.py
smart-heating/: dependencies_apt.txt  requirements.txt  run.sh
smart-heating/backend/: config.py  main.py  pyproject.toml
smart-heating/backend/api/: api_server.py  controller.py  dependencies.py
smart-heating/backend/api/routes/: heating.py  mode.py  status.py  system.py  temperature.py  ui.py
smart-heating/backend/core/: app_controller.py  heating.py  switch.py  temperature.py  thermostat.py
smart-heating/backend/data/: temperature_2026-03-11_23-31-56.csv  temperature_2026-03-11_23-34-23.csv  temperature_2026-03-11_23-54-23.csv  temperature_2026-03-12_00-04-00.csv  temperature_2026-03-12_06-06-44.csv  temperature_2026-03-12_13-05-56.csv
smart-heating/backend/logs/: log_2026-02-20.csv
smart-heating/backend/services/: logger_service.py  storage_manager.py
smart-heating/backend/services/storage/: base_storage.py  dropbox_storage.py  local_storage.py  usb_storage.py
smart-heating/backend/smart_heating.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
smart-heating/backend/tests/: test_base_storage.py  test_dropbox_storage.py  test_heating.py  test_local_storage.py  test_logger.py  test_logger_flush.py  test_logger_manual.py  test_logger_service.py  test_switch_heating.py  test_temperature.py
smart-heating/dropbox:/: temperature_2026-03-14_19-32-08.csv
smart-heating/install/: install.sh  setup_dependencies.sh  uninstall.sh
smart-heating/scripts/: audit_dependencies.py  clean_python_cache.sh  requirements.txt
